--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,15 @@ jobs:
       run: |
         rm -rf ./.git
         wget https://github.com/topjohnwu/Magisk/raw/master/scripts/module_installer.sh -O META-INF/com/google/android/update-binary
-        zip -r ../notocjk.zip ./*
+        zip -9 -r ../notocjk.zip ./*
+        sha256sum ../notocjk.zip > ../notocjk.zip.sha256sum
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ../notocjk.zip
+        files: |
+          ../notocjk.zip
+          ../notocjk.zip.sha256sum
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: actions/upload-artifact@v1
