A12 DP3 limitation for limited file mounting logic

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Make release zip
       run: |
         wget https://github.com/topjohnwu/Magisk/raw/master/scripts/module_installer.sh -O META-INF/com/google/android/update-binary
-        zip -9 -x "*.git*" -x "*pics*" -r ../notocjk.zip ./
+        zip -9 -x "*.git*" -r ../notocjk.zip ./
         sha256sum ../notocjk.zip > ../notocjk.zip.sha256sum
     - name: Release
       uses: softprops/action-gh-release@v1
