--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,29 @@
 name: Upload zip
-on: push
+on:
+  - push
+  - pull_request
+  - workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.13'
+        cache: 'poetry'
+    - name: Install poetry
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install
+    - name: Run python script
+      run: |
+        poetry run python -m chws_subset
     - name: Make release zip
       run: |
-        wget https://github.com/topjohnwu/Magisk/raw/master/scripts/module_installer.sh -O META-INF/com/google/android/update-binary
-        zip -9 -x "*.git*" -x "extra/*" -x "extra" -r ../notocjk.zip ./
+        zip -9 -x "*.git*" -x "chws_subset*" -x "extra*" -x "poetry.lock" -x "pyproject.toml" -r ../notocjk.zip ./
         sha256sum ../notocjk.zip > ../notocjk.zip.sha256sum
     - name: Release
       uses: softprops/action-gh-release@v2
