--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: notocjk
-        path: ./
+        path: ../notocjk.zip
 
