fix(pyproject.toml): add packages property
https://github.com/orgs/python-poetry/discussions/9835#discussioncomment-11176869

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Simon Shi <simonsmh@gmail.com>"]
 readme = "README.md"
+packages = [
+    { include = "chws_subset" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.13"
